--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,23 +55,24 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation "androidx.compose.ui:ui:1.0.4"
-    implementation "androidx.compose.material:material:1.0.4"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.0.4"
+    implementation "androidx.compose.ui:ui:1.0.5"
+    implementation "androidx.compose.material:material:1.0.5"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.0.5"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.compose.animation:animation-graphics:1.1.0-beta02'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
-    implementation 'androidx.compose.material:material-icons-extended:1.0.4'
+    implementation 'androidx.compose.material:material-icons-extended:1.0.5'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.0.4"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.0.4"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.0.5"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.0.5"
     androidTestImplementation 'androidx.room:room-testing:2.3.0'
 }
