Move media player functionality from view model to service.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.compose.animation:animation-graphics:1.1.0-beta02'
+    implementation 'androidx.lifecycle:lifecycle-service:2.4.0'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
