--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,16 +52,28 @@ android {
     }
 }
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        freeCompilerArgs += [
+                '-Xopt-in=kotlin.RequiresOptIn',
+                '-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-Xopt-in=androidx.compose.animation.ExperimentalAnimationApi',
+                '-Xopt-in=androidx.compose.animation.graphics.ExperimentalAnimationGraphicsApi',
+                '-Xopt-in=androidx.compose.ui.ExperimentalComposeUiApi',
+        ]
+    }
+}
+
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.compose.ui:ui:1.0.5"
     implementation "androidx.compose.material:material:1.0.5"
     implementation "androidx.compose.ui:ui-tooling-preview:1.0.5"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation 'androidx.compose.animation:animation-graphics:1.1.0-beta02'
+    implementation 'androidx.compose.animation:animation-graphics:1.1.0-beta03'
     implementation 'androidx.lifecycle:lifecycle-service:2.4.0'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation 'androidx.room:room-runtime:2.3.0'
