--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,20 +60,22 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
                 '-Xopt-in=androidx.compose.animation.ExperimentalAnimationApi',
                 '-Xopt-in=androidx.compose.animation.graphics.ExperimentalAnimationGraphicsApi',
                 '-Xopt-in=androidx.compose.ui.ExperimentalComposeUiApi',
+                '-Xopt-in=androidx.compose.foundation.ExperimentalFoundationApi'
         ]
     }
 }
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "androidx.compose.ui:ui:1.1.0-beta03"
+    implementation "androidx.compose.material:material:1.1.0-beta03"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.1.0-beta03"
+    implementation 'androidx.compose.animation:animation:1.1.0-beta03'
+    implementation 'androidx.compose.animation:animation-graphics:1.1.0-beta03'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation "androidx.compose.ui:ui:1.0.5"
-    implementation "androidx.compose.material:material:1.0.5"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.0.5"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation 'androidx.compose.animation:animation-graphics:1.1.0-beta03'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-service:2.4.0'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation 'androidx.room:room-runtime:2.3.0'
