--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.cliffracertech.soundobservatory"
+        applicationId "com.cliffracertech.soundaura"
         minSdk 23
         targetSdk 31
         versionCode 1
