--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,11 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:1.1.0-beta03"
-    implementation "androidx.compose.material:material:1.1.0-beta03"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.1.0-beta03"
-    implementation 'androidx.compose.animation:animation:1.1.0-beta03'
-    implementation 'androidx.compose.animation:animation-graphics:1.1.0-beta03'
+    implementation "androidx.compose.ui:ui:1.1.0-beta04"
+    implementation "androidx.compose.material:material:1.1.0-beta04"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.1.0-beta04"
+    implementation 'androidx.compose.animation:animation:1.1.0-beta04'
+    implementation 'androidx.compose.animation:animation-graphics:1.1.0-beta04'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
@@ -85,6 +85,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     implementation "androidx.media:media:1.4.3"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
