--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,32 +68,35 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:1.1.0"
-    implementation "androidx.compose.material:material:1.1.0"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.1.0"
-    implementation 'androidx.compose.animation:animation:1.1.0'
-    implementation 'androidx.compose.animation:animation-graphics:1.1.0'
+    implementation "androidx.compose.ui:ui:1.1.1"
+    implementation "androidx.compose.material:material:1.1.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
+    implementation 'androidx.compose.animation:animation:1.1.1'
+    implementation 'androidx.compose.animation:animation-graphics:1.1.1'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-service:2.4.1'
-    implementation 'androidx.room:room-runtime:2.4.1'
-    implementation 'androidx.room:room-ktx:2.4.1'
-    implementation 'androidx.compose.material:material-icons-extended:1.1.0'
+    implementation 'androidx.room:room-runtime:2.4.2'
+    implementation 'androidx.room:room-ktx:2.4.2'
+    implementation 'androidx.compose.material:material-icons-extended:1.1.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
+    implementation 'androidx.documentfile:documentfile:1.0.1'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     implementation "androidx.media:media:1.5.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "com.google.dagger:hilt-android:2.40.5"
-    kapt "androidx.room:room-compiler:2.4.1"
+    implementation "com.google.accompanist:accompanist-insets:0.23.1"
+
+    kapt "androidx.room:room-compiler:2.4.2"
     kapt "com.google.dagger:hilt-compiler:2.40.5"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.0"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.1.0"
-    androidTestImplementation 'androidx.room:room-testing:2.4.1'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+    androidTestImplementation 'androidx.room:room-testing:2.4.2'
 }
