--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.5'
+        classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:10.0.0"
     }
 }
 
