--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,9 +97,12 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.40.5"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
+    testImplementation "com.google.truth:truth:1.1.3"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.1.1"
     debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+    debugImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
     androidTestImplementation 'androidx.room:room-testing:2.4.2'
 }
