--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,11 +97,16 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.40.5"
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation 'androidx.test:core-ktx:1.4.0'
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
+    testImplementation "org.robolectric:robolectric:4.5.1"
+    testImplementation 'androidx.test.ext:truth:1.4.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2'
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.1.1"
     debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
     debugImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
-    androidTestImplementation "com.google.truth:truth:1.1.3"
+
+    androidTestImplementation 'androidx.test.ext:truth:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
     androidTestImplementation 'androidx.room:room-testing:2.4.2'
