--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
+    testOptions.unitTests.includeAndroidResources = true
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
