--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:exported="false" />
 
         <service
-            android:name=".TogglePlayerTileService"
+            android:name=".TogglePlaybackTileService"
             android:label="@string/app_name"
             android:icon="@drawable/tile_and_notification_icon"
             android:exported="true"
