--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,12 @@ android {
         applicationId "com.cliffracertech.soundaura"
         minSdk 24
         targetSdk 31
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments += ["room.schemaLocation":
-                              "$projectDir/schemas".toString()]
+                arguments += ["room.schemaLocation":"$projectDir/schemas".toString()]
             }
         }
         kapt.arguments { arg("room.schemaLocation", "$projectDir/schemas") }
@@ -78,14 +77,14 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation "androidx.compose.ui:ui:1.1.1"
     implementation "androidx.compose.material:material:1.1.1"
     implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
     implementation 'androidx.compose.animation:animation:1.1.1'
     implementation 'androidx.compose.animation:animation-graphics:1.1.1'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-service:2.4.1'
