--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     sourceSets {
         androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
@@ -15,9 +15,9 @@ android {
     defaultConfig {
         applicationId "com.cliffracertech.soundaura"
         minSdk 24
-        targetSdk 31
-        versionCode 2
-        versionName "1.1.0"
+        targetSdk 32
+        versionCode 3
+        versionName "1.2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -77,21 +77,21 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation "androidx.compose.ui:ui:1.1.1"
-    implementation "androidx.compose.material:material:1.1.1"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
-    implementation 'androidx.compose.animation:animation:1.1.1'
-    implementation 'androidx.compose.animation:animation-graphics:1.1.1'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation "androidx.compose.ui:ui:1.2.1"
+    implementation "androidx.compose.material:material:1.2.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+    implementation 'androidx.compose.animation:animation:1.2.1'
+    implementation 'androidx.compose.animation:animation-graphics:1.2.1'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.activity:activity-compose:1.5.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
-    implementation 'androidx.lifecycle:lifecycle-service:2.5.0'
-    implementation 'androidx.room:room-runtime:2.4.2'
-    implementation 'androidx.room:room-ktx:2.4.2'
-    implementation 'androidx.compose.material:material-icons-extended:1.1.1'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0'
+    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
+    implementation 'androidx.room:room-runtime:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
+    implementation 'androidx.compose.material:material-icons-extended:1.2.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.documentfile:documentfile:1.0.1'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     implementation "androidx.media:media:1.6.0"
@@ -101,7 +101,7 @@ dependencies {
     implementation "com.mikepenz:aboutlibraries-core:10.0.0"
     implementation "com.mikepenz:aboutlibraries-compose:10.0.0"
 
-    kapt "androidx.room:room-compiler:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.3"
     kapt "com.google.dagger:hilt-compiler:2.42"
 
     testImplementation 'junit:junit:4.13.2'
@@ -110,13 +110,14 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.5.1"
     testImplementation 'androidx.test.ext:truth:1.4.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.1.1"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
-    debugImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.2.1"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
+    debugImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
 
     androidTestImplementation 'androidx.test.ext:truth:1.4.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
-    androidTestImplementation 'androidx.room:room-testing:2.4.2'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
+    androidTestImplementation 'androidx.room:room-testing:2.4.3'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
 }
