--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,8 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
             '-Xopt-in=androidx.compose.animation.ExperimentalAnimationApi',
             '-Xopt-in=androidx.compose.animation.graphics.ExperimentalAnimationGraphicsApi',
             '-Xopt-in=androidx.compose.ui.ExperimentalComposeUiApi',
-            '-Xopt-in=androidx.compose.foundation.ExperimentalFoundationApi'
+            '-Xopt-in=androidx.compose.foundation.ExperimentalFoundationApi',
+            '-Xopt-in=androidx.compose.material3.windowsizeclass.ExperimentalMaterial3WindowSizeClassApi',
         ]
     }
 }
@@ -84,7 +85,7 @@ dependencies {
     implementation 'androidx.compose.animation:animation-graphics:1.2.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
     implementation 'androidx.room:room-runtime:2.4.3'
@@ -100,6 +101,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-insets:0.23.1"
     implementation "com.mikepenz:aboutlibraries-core:10.0.0"
     implementation "com.mikepenz:aboutlibraries-compose:10.0.0"
+    implementation "androidx.compose.material3:material3:1.0.0-rc01"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
 
     kapt "androidx.room:room-compiler:2.4.3"
     kapt "com.google.dagger:hilt-compiler:2.42"
@@ -109,14 +112,14 @@ dependencies {
     testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
     testImplementation "org.robolectric:robolectric:4.5.1"
     testImplementation 'androidx.test.ext:truth:1.4.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.2.1"
     debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
     debugImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
 
     androidTestImplementation 'androidx.test.ext:truth:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
     androidTestImplementation 'androidx.room:room-testing:2.4.3'
     androidTestImplementation 'androidx.test:rules:1.4.0'
