--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,13 +65,13 @@ android {
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
         freeCompilerArgs += [
-            '-Xopt-in=kotlin.RequiresOptIn',
-            '-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi',
-            '-Xopt-in=androidx.compose.animation.ExperimentalAnimationApi',
-            '-Xopt-in=androidx.compose.animation.graphics.ExperimentalAnimationGraphicsApi',
-            '-Xopt-in=androidx.compose.ui.ExperimentalComposeUiApi',
-            '-Xopt-in=androidx.compose.foundation.ExperimentalFoundationApi',
-            '-Xopt-in=androidx.compose.material3.windowsizeclass.ExperimentalMaterial3WindowSizeClassApi',
+            '-opt-in=kotlin.RequiresOptIn',
+            '-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi',
+            '-opt-in=androidx.compose.animation.ExperimentalAnimationApi',
+            '-opt-in=androidx.compose.animation.graphics.ExperimentalAnimationGraphicsApi',
+            '-opt-in=androidx.compose.ui.ExperimentalComposeUiApi',
+            '-opt-in=androidx.compose.foundation.ExperimentalFoundationApi',
+            '-opt-in=androidx.compose.material3.windowsizeclass.ExperimentalMaterial3WindowSizeClassApi',
         ]
     }
 }
@@ -118,7 +118,7 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:truth:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
     androidTestImplementation 'androidx.room:room-testing:2.4.3'
     androidTestImplementation 'androidx.test:rules:1.4.0'
