--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,10 +95,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.documentfile:documentfile:1.0.1'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+    implementation "com.google.accompanist:accompanist-insets:0.23.1"
+    implementation "com.google.accompanist:accompanist-insets-ui:0.23.1"
     implementation "androidx.media:media:1.6.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "com.google.dagger:hilt-android:2.42"
-    implementation "com.google.accompanist:accompanist-insets:0.23.1"
     implementation "com.mikepenz:aboutlibraries-core:10.0.0"
     implementation "com.mikepenz:aboutlibraries-compose:10.0.0"
     implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
