--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "com.cliffracertech.soundaura"
         minSdk 24
         targetSdk 33
-        versionCode 5
-        versionName "1.2.2"
+        versionCode 6
+        versionName "1.3.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -65,12 +65,13 @@ android {
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
         freeCompilerArgs += [
-            '-Xopt-in=kotlin.RequiresOptIn',
-            '-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi',
-            '-Xopt-in=androidx.compose.animation.ExperimentalAnimationApi',
-            '-Xopt-in=androidx.compose.animation.graphics.ExperimentalAnimationGraphicsApi',
-            '-Xopt-in=androidx.compose.ui.ExperimentalComposeUiApi',
-            '-Xopt-in=androidx.compose.foundation.ExperimentalFoundationApi'
+            '-opt-in=kotlin.RequiresOptIn',
+            '-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi',
+            '-opt-in=androidx.compose.animation.ExperimentalAnimationApi',
+            '-opt-in=androidx.compose.animation.graphics.ExperimentalAnimationGraphicsApi',
+            '-opt-in=androidx.compose.ui.ExperimentalComposeUiApi',
+            '-opt-in=androidx.compose.foundation.ExperimentalFoundationApi',
+            '-opt-in=androidx.compose.material3.windowsizeclass.ExperimentalMaterial3WindowSizeClassApi',
         ]
     }
 }
@@ -84,7 +85,7 @@ dependencies {
     implementation 'androidx.compose.animation:animation-graphics:1.2.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
     implementation 'androidx.room:room-runtime:2.4.3'
@@ -94,12 +95,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.documentfile:documentfile:1.0.1'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+    implementation "com.google.accompanist:accompanist-insets:0.23.1"
+    implementation "com.google.accompanist:accompanist-insets-ui:0.23.1"
     implementation "androidx.media:media:1.6.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "com.google.dagger:hilt-android:2.42"
-    implementation "com.google.accompanist:accompanist-insets:0.23.1"
     implementation "com.mikepenz:aboutlibraries-core:10.0.0"
     implementation "com.mikepenz:aboutlibraries-compose:10.0.0"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
 
     kapt "androidx.room:room-compiler:2.4.3"
     kapt "com.google.dagger:hilt-compiler:2.42"
@@ -109,7 +112,7 @@ dependencies {
     testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
     testImplementation "org.robolectric:robolectric:4.5.1"
     testImplementation 'androidx.test.ext:truth:1.4.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.2.1"
     debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
     debugImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
