--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,19 +78,19 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation "androidx.compose.ui:ui:1.2.1"
-    implementation "androidx.compose.material:material:1.2.1"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
-    implementation 'androidx.compose.animation:animation:1.2.1'
-    implementation 'androidx.compose.animation:animation-graphics:1.2.1'
+    implementation "androidx.compose.ui:ui:1.3.0"
+    implementation "androidx.compose.material:material:1.3.0"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0"
+    implementation 'androidx.compose.animation:animation:1.3.0'
+    implementation 'androidx.compose.animation:animation-graphics:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
     implementation 'androidx.room:room-runtime:2.4.3'
     implementation 'androidx.room:room-ktx:2.4.3'
-    implementation 'androidx.compose.material:material-icons-extended:1.2.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.3.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.documentfile:documentfile:1.0.1'
@@ -102,7 +102,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.42"
     implementation "com.mikepenz:aboutlibraries-core:10.0.0"
     implementation "com.mikepenz:aboutlibraries-compose:10.0.0"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
+    implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha01"
 
     kapt "androidx.room:room-compiler:2.4.3"
     kapt "com.google.dagger:hilt-compiler:2.42"
@@ -113,14 +113,14 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.5.1"
     testImplementation 'androidx.test.ext:truth:1.4.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.2.1"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
-    debugImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0"
+    debugImplementation "androidx.compose.ui:ui-test-junit4:1.3.0"
 
     androidTestImplementation 'androidx.test.ext:truth:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0"
     androidTestImplementation 'androidx.room:room-testing:2.4.3'
     androidTestImplementation 'androidx.test:rules:1.4.0'
 }
