--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,11 +78,11 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation "androidx.compose.ui:ui:1.3.0"
-    implementation "androidx.compose.material:material:1.3.0"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0"
-    implementation 'androidx.compose.animation:animation:1.3.0'
-    implementation 'androidx.compose.animation:animation-graphics:1.3.0'
+    implementation "androidx.compose.ui:ui:1.3.1"
+    implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.1"
+    implementation 'androidx.compose.animation:animation:1.3.1'
+    implementation 'androidx.compose.animation:animation-graphics:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.activity:activity-compose:1.6.1'
@@ -90,7 +90,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
     implementation 'androidx.room:room-runtime:2.4.3'
     implementation 'androidx.room:room-ktx:2.4.3'
-    implementation 'androidx.compose.material:material-icons-extended:1.3.0'
+    implementation 'androidx.compose.material:material-icons-extended:1.3.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.documentfile:documentfile:1.0.1'
@@ -102,7 +102,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.42"
     implementation "com.mikepenz:aboutlibraries-core:10.0.0"
     implementation "com.mikepenz:aboutlibraries-compose:10.0.0"
-    implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha01"
+    implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha02"
+    implementation 'org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5'
 
     kapt "androidx.room:room-compiler:2.4.3"
     kapt "com.google.dagger:hilt-compiler:2.42"
